k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: demo-hagen
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
