k8s/ingress.yml
# k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-tier-ingress
  namespace: demo-hagen
spec:
  ingressClassName: nginx
  rules:
    - host: app.hagen.ironlabs.online
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
